deploy/k8s/root-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: root-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/permanent-redirect: "http://docs.45.146.164.70.nip.io"
spec:
  ingressClassName: nginx
  rules:
    - host: api.45.146.164.70.nip.io
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
